# isle-esp32

./: .gitmodules  CMakeLists.txt  README.md  sdkconfig
components/iniparser/: CMakeLists.txt
components/lego1/: CMakeLists.txt  LEGO1
components/miniaudio/: CMakeLists.txt  miniaudio
components/miniwin/: CMakeLists.txt  miniwin
components/smacker/: CMakeLists.txt  libsmacker
main/: CMakeLists.txt  idf_component.yml  isleapp.cpp  isleapp.h  main.c
