idf_component_register(
    SRCS
        # tglrl sources
        "../isle-portable/LEGO1/tgl/d3drm/camera.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/device.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/group.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/light.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/mesh.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/meshbuilder.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/renderer.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/texture.cpp"
        "../isle-portable/LEGO1/tgl/d3drm/view.cpp"

        # realtime sources
        "../isle-portable/LEGO1/realtime/orientableroi.cpp"
        "../isle-portable/LEGO1/realtime/realtime.cpp"
        "../isle-portable/LEGO1/realtime/realtimeview.cpp"

        # viewmanager sources
        "../isle-portable/LEGO1/viewmanager/viewlod.cpp"
        "../isle-portable/LEGO1/viewmanager/viewlodlist.cpp"
        "../isle-portable/LEGO1/viewmanager/viewmanager.cpp"
        "../isle-portable/LEGO1/viewmanager/viewroi.cpp"

        # mxdirectx sources
        "../isle-portable/LEGO1/mxdirectx/mxdirect3d.cpp"
        "../isle-portable/LEGO1/mxdirectx/mxdirectdraw.cpp"
        "../isle-portable/LEGO1/mxdirectx/mxdirectxinfo.cpp"
        "../isle-portable/LEGO1/mxdirectx/legodxinfo.cpp"

        # roi sources
        "../isle-portable/LEGO1/lego/sources/roi/legolod.cpp"
        "../isle-portable/LEGO1/lego/sources/roi/legoroi.cpp"

        # geom sources
        "../isle-portable/LEGO1/lego/sources/geom/legoedge.cpp"
        "../isle-portable/LEGO1/lego/sources/geom/legoorientededge.cpp"
        "../isle-portable/LEGO1/lego/sources/geom/legoweedge.cpp"
        "../isle-portable/LEGO1/lego/sources/geom/legowegedge.cpp"

        # shape sources
        "../isle-portable/LEGO1/lego/sources/shape/legocolor.cpp"
        "../isle-portable/LEGO1/lego/sources/shape/legobox.cpp"
        "../isle-portable/LEGO1/lego/sources/shape/legomesh.cpp"
        "../isle-portable/LEGO1/lego/sources/shape/legosphere.cpp"
        "../isle-portable/LEGO1/lego/sources/shape/legovertex.cpp"

        # anim sources
        "../isle-portable/LEGO1/lego/sources/anim/legoanim.cpp"

        # misc sources
        "../isle-portable/LEGO1/lego/sources/misc/legocontainer.cpp"
        "../isle-portable/LEGO1/lego/sources/misc/legoimage.cpp"
        "../isle-portable/LEGO1/lego/sources/misc/legostorage.cpp"
        "../isle-portable/LEGO1/lego/sources/misc/legotexture.cpp"
        "../isle-portable/LEGO1/lego/sources/misc/legotree.cpp"
        "../isle-portable/LEGO1/lego/sources/misc/legounknown.cpp"

        # 3dmanager sources
        "../isle-portable/LEGO1/lego/sources/3dmanager/lego3dmanager.cpp"
        "../isle-portable/LEGO1/lego/sources/3dmanager/lego3dview.cpp"
        "../isle-portable/LEGO1/lego/sources/3dmanager/legoview1.cpp"
        "../isle-portable/LEGO1/lego/sources/3dmanager/tglsurface.cpp"

        # omni sources
        "../isle-portable/LEGO1/omni/src/action/mxdsaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsanim.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsevent.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsmediaaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsmultiaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsobjectaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsobject.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsparallelaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsselectaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsserialaction.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdssound.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsstill.cpp"
        "../isle-portable/LEGO1/omni/src/action/mxdsstreamingaction.cpp"
        "../isle-portable/LEGO1/omni/src/audio/mxaudiomanager.cpp"
        "../isle-portable/LEGO1/omni/src/audio/mxaudiopresenter.cpp"
        "../isle-portable/LEGO1/omni/src/audio/mxsoundmanager.cpp"
        "../isle-portable/LEGO1/omni/src/audio/mxsoundpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/audio/mxwavepresenter.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxatom.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxcompositepresenter.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxcore.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxdebug.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxmediamanager.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxmediapresenter.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxmisc.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxobjectfactory.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxstring.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxticklemanager.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxtimer.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxutilities.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxvariable.cpp"
        "../isle-portable/LEGO1/omni/src/common/mxvariabletable.cpp"
        "../isle-portable/LEGO1/omni/src/entity/mxentity.cpp"
        "../isle-portable/LEGO1/omni/src/event/mxeventmanager.cpp"
        "../isle-portable/LEGO1/omni/src/event/mxeventpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/main/mxomni.cpp"
        "../isle-portable/LEGO1/omni/src/main/mxomnicreateflags.cpp"
        "../isle-portable/LEGO1/omni/src/main/mxomnicreateparam.cpp"
        "../isle-portable/LEGO1/omni/src/notify/mxactionnotificationparam.cpp"
        "../isle-portable/LEGO1/omni/src/notify/mxnotificationmanager.cpp"
        "../isle-portable/LEGO1/omni/src/notify/mxnotificationparam.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdiskstreamcontroller.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdiskstreamprovider.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdsbuffer.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdschunk.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdsfile.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxdssubscriber.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxio.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxramstreamcontroller.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxramstreamprovider.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxstreamchunk.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxstreamcontroller.cpp"
        "../isle-portable/LEGO1/omni/src/stream/mxstreamer.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxautolock.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxcriticalsection.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxscheduler.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxsemaphore.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxthread.cpp"
        "../isle-portable/LEGO1/omni/src/system/mxticklethread.cpp"
        "../isle-portable/LEGO1/omni/src/video/flic.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxbitmap.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxdisplaysurface.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxflcpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxloopingflcpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxloopingsmkpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxpalette.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxregion.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxsmk.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxsmkpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxstillpresenter.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxvideomanager.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxvideoparam.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxvideoparamflags.cpp"
        "../isle-portable/LEGO1/omni/src/video/mxvideopresenter.cpp"

        # lego1_impl sources
        "../isle-portable/LEGO1/define.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/act2actor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/act2genactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/act3actors.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/act3ammo.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/ambulance.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/bike.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/buildingentity.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/buildings.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/bumpbouy.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/doors.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/dunebuggy.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/helicopter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/isleactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/islepathactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/jetski.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/jukeboxentity.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/motorcycle.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/pizza.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/pizzeria.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/racecar.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/radio.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/skateboard.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/actors/towtrack.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/lego3dsound.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/lego3dwavepresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/legocachsound.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/legocachesoundmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/legoloadcachesoundpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/legosoundmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/audio/mxbackgroundaudiomanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/build/legocarbuild.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/build/legocarbuildpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoactioncontrolpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoactors.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoanimationmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoanimmmpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legobuildingmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legocharactermanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legogamestate.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoobjectfactory.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legophoneme.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoplantmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoplants.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legostate.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legotextureinfo.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legoutils.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/legovariables.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/misc.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/mxcompositemediapresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/mxcontrolpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/common/mxtransitionmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/control/legocontrolmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/control/legometerpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/act2brick.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/act2policestation.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoactorpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legocameracontroller.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoentity.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoentitypresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legolocations.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legonavcontroller.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legopovcontroller.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoworld.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/entity/legoworldpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/input/legoinputmanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/main/legomain.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/main/scripts.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legoanimactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legoextraactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legopathactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legopathboundary.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legopathcontroller.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legopathpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/paths/legopathstruct.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/carrace.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/jetskirace.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/legorace.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/legoraceactor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/legoracemap.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/legoracers.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/legoracespecial.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/race/raceskel.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legoanimpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legoflctexturepresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legohideanimpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legolocomotionanimpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legoloopinganimpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legomodelpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legopalettepresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legopartpresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legophonemepresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legotexturepresenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/video/legovideomanager.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/act3.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/elevatorbottom.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/gasstation.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/historybook.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/hospital.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/infocenter.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/infocenterdoor.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/isle.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/jukebox.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/legoact2.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/police.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/registrationbook.cpp"
        "../isle-portable/LEGO1/lego/legoomni/src/worlds/score.cpp"
        "../isle-portable/LEGO1/modeldb/modeldb.cpp"

        ## MINIWIN
        # Core
        "../isle-portable/miniwin/src/windows/windows.cpp"

        # DDraw
        "../isle-portable/miniwin/src/ddraw/ddpalette.cpp"
        "../isle-portable/miniwin/src/ddraw/ddraw.cpp"
        "../isle-portable/miniwin/src/ddraw/ddsurface.cpp"
        "../isle-portable/miniwin/src/ddraw/framebuffer.cpp"

        # D3DRM
        "../isle-portable/miniwin/src/d3drm/d3drm.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmdevice.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmframe.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmlight.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmmesh.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmtexture.cpp"
        "../isle-portable/miniwin/src/d3drm/d3drmviewport.cpp"
        "../isle-portable/miniwin/src/internal/meshutils.cpp"

        # D3DRM backends
        "../isle-portable/miniwin/src/d3drm/backends/sdl3gpu/renderer.cpp"
        "../isle-portable/miniwin/src/d3drm/backends/sdl3gpu/shaders/generated/ShaderIndex.cpp"
        "../isle-portable/miniwin/src/d3drm/backends/software/renderer.cpp"

        "main.c"
    PRIV_REQUIRES spi_flash
    INCLUDE_DIRS
        # 3rdparty
        "../isle-portable/3rdparty/vec"
        ""

        # LEGO1
        "../isle-portable/util"
        "../isle-portable/LEGO1"
        "../isle-portable/LEGO1/omni/include"
        "../isle-portable/LEGO1/lego/sources"
        "../isle-portable/LEGO1/lego/legoomni/include"
        "../isle-portable/LEGO1/lego/legoomni/include/actions"

        # Miniwin
        "../isle-portable/miniwin/include"
        "../isle-portable/miniwin/include/miniwin"
)
